# huawei-solar

./: Dockerfile  docker-compose.yaml
Collector/: Cargo.toml  Dockerfile
Collector-kt/: build.gradle.kts  settings.gradle.kts
Collector-kt/src/main/kotlin/: Main.kt
Collector-kt/src/main/resources/: registers.json
Collector/resources/: config.yaml
Collector/src/: main.rs
Influx/: docker-compose.yaml  telegraf.conf
Superset/: Dockerfile  superset_config.py
Timescale/: .gitignore  docker-compose.yaml  setup.sql  superset.sql  telegraf.conf
Timescale/Superset/: Dockerfile  superset_config.py
huawei-solar-collector/: Cargo.toml  Dockerfile  Makefile
huawei-solar-collector/.cargo/: config
huawei-solar-collector/resources/: config.yaml
huawei-solar-collector/src/: main.rs
huawei-solar-rust/: Cargo.toml  README.md
huawei-solar-rust/src/: lib.rs
