[package]
name = "huawei_solar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
cron = "0.12.0"
modbus = "1.0.4"
chrono = "0.4.22"
postgres = { version = "0.19.4", features = ["with-chrono-0_4"] }
serde_yaml = "0.9.14"
serde = { version = "1.0", features = ["derive"] }
parse_duration = "2.1.1"
num = "0.4.1"
bit-vec = "0.6.3"
thiserror = "1.0.58"
